package mastermind.views.graphics;

import mastermind.controllers.StartController;

public class StartView {

	protected void interact(StartController startController) {
		// TODO Auto-generated method stub
		
	}
}
